added ec2 terminate capability + starting abstraction of cloud_resource_list

--- a/src/http/Makefile.am
+++ b/src/http/Makefile.am
@@ -15,4 +15,6 @@ libhttp_a_SOURCES = http_request_parser.hh \
         http_message_sequence.hh \
         backing_store.hh backing_store.cc \
         cloud_resource.hh cloud_resource.cc \
-	v2filter.hh
+        cloud_resource_list.hh cloud_resource_list.cc \ 
+        v2filter_client.hh \
+	v2filter_server.hh
